--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ ul{
     <img src="l.jpg" width="1328" height="110" alt="UC Logo" />
 	    <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="o.html" target="_blank">News</a></li>
-            <li><a href="Facultymenbers.html" target="_blank">Facultymenbers</a></li>
+            <li><a href="News.html" target="_blank">News</a></li>
+            <li><a href="Faculty menbers.html" target="_blank">Facultymenbers</a></li>
             <li><a href="Professional Traning.html" target="_blank">Professional Traning</a></li>
             <li class="dropdown">
               <a href="javascript:void(0)" class="dropbtn">Degree Programs</a>
